# databricks-pypi-installer

./: README.md  pyproject.toml
databricks_pypi_installer/: installer.py
src/databricks_pypi_installer/: __init__.py  installer.py
tests/: test_installer.py
